// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppRegistry getApplication "getStyleElement" produces styles that are a function of rendering "element": Additional CSS for styled app 1`] = `
"
.rn-backgroundColor-aot4c7{background-color:rgba(128,0,128,1.00)}
.rn-borderTopWidth-10pzpfo{border-top-width:1234px}
.rn-borderRightWidth-1y24uml{border-right-width:1234px}
.rn-borderBottomWidth-98wxn4{border-bottom-width:1234px}
.rn-borderLeftWidth-150mub4{border-left-width:1234px}"
`;

exports[`AppRegistry getApplication "getStyleElement" produces styles that are a function of rendering "element": CSS for an unstyled app 1`] = `
"@media all{
html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0);}
body{margin:0;}
button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
input::-webkit-inner-spin-button,input::-webkit-outer-spin-button,input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-webkit-search-results-button,input::-webkit-search-results-decoration{display:none;}
.ui-base{background-color:transparent;color:inherit;font:inherit;list-style:none;margin:0;text-align:inherit;text-decoration:none;}
.ui-view{-ms-flex-align:stretch;-webkit-box-align:stretch;-webkit-align-items:stretch;align-items:stretch;border-color:black;border-style:solid;border-width:0;box-sizing:border-box;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;-ms-flex-preferred-size:auto;-webkit-flex-basis:auto;flex-basis:auto;-ms-flex-direction:column;-webkit-box-direction:normal;-webkit-box-orient:vertical;-webkit-flex-direction:column;flex-direction:column;-ms-flex-negative:0;-webkit-flex-shrink:0;flex-shrink:0;margin:0;min-width:0;padding:0;position:relative;z-index:0;}
.ui-text{background-color:transparent;border-width:0;box-sizing:border-box;color:inherit;display:inline;font:inherit;font-family:system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif;font-size:14px;margin:0;padding:0;text-align:inherit;text-decoration:none;white-space:pre-wrap;word-wrap:break-word;}
.ui-textinput{-moz-appearance:textfield;-webkit-appearance:none;background-color:transparent;border-color:black;border-radius:0;border-style:solid;border-width:0;box-sizing:border-box;font-family:system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif;font-size:14px;padding:0;resize:none;}
.ui-pressable{cursor:pointer;}
}
.rn-pointerEvents-12vffkv > *{pointer-events:auto}
.rn-pointerEvents-12vffkv{pointer-events:none !important}
.rn-flexGrow-16y2uox{-ms-flex-positive:1;-webkit-box-flex:1;-webkit-flex-grow:1;flex-grow:1}
.rn-flexShrink-1wbh5a2{-ms-flex-negative:1;-webkit-flex-shrink:1;flex-shrink:1}
.rn-flexBasis-1ro0kt6{-ms-flex-preferred-size:0%;-webkit-flex-basis:0%;flex-basis:0%}"
`;

exports[`AppRegistry getApplication returns "element" and "getStyleElement" 1`] = `
<AppContainer
  WrapperComponent={undefined}
  rootTag={Object {}}
>
  <RootComponent />
</AppContainer>
`;

exports[`AppRegistry getApplication returns "element" and "getStyleElement" 2`] = `
"<style id=\\"react-native-stylesheet\\">@media all{
html{-ms-text-size-adjust:100%;-webkit-text-size-adjust:100%;-webkit-tap-highlight-color:rgba(0,0,0,0);}
body{margin:0;}
button::-moz-focus-inner,input::-moz-focus-inner{border:0;padding:0;}
input::-webkit-inner-spin-button,input::-webkit-outer-spin-button,input::-webkit-search-cancel-button,input::-webkit-search-decoration,input::-webkit-search-results-button,input::-webkit-search-results-decoration{display:none;}
.ui-base{background-color:transparent;color:inherit;font:inherit;list-style:none;margin:0;text-align:inherit;text-decoration:none;}
.ui-view{-ms-flex-align:stretch;-webkit-box-align:stretch;-webkit-align-items:stretch;align-items:stretch;border-color:black;border-style:solid;border-width:0;box-sizing:border-box;display:-webkit-box;display:-moz-box;display:-ms-flexbox;display:-webkit-flex;display:flex;-ms-flex-preferred-size:auto;-webkit-flex-basis:auto;flex-basis:auto;-ms-flex-direction:column;-webkit-box-direction:normal;-webkit-box-orient:vertical;-webkit-flex-direction:column;flex-direction:column;-ms-flex-negative:0;-webkit-flex-shrink:0;flex-shrink:0;margin:0;min-width:0;padding:0;position:relative;z-index:0;}
.ui-text{background-color:transparent;border-width:0;box-sizing:border-box;color:inherit;display:inline;font:inherit;font-family:system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif;font-size:14px;margin:0;padding:0;text-align:inherit;text-decoration:none;white-space:pre-wrap;word-wrap:break-word;}
.ui-textinput{-moz-appearance:textfield;-webkit-appearance:none;background-color:transparent;border-color:black;border-radius:0;border-style:solid;border-width:0;box-sizing:border-box;font-family:system-ui, -apple-system, BlinkMacSystemFont, \\"Segoe UI\\", Roboto, Ubuntu, \\"Helvetica Neue\\", sans-serif;font-size:14px;padding:0;resize:none;}
.ui-pressable{cursor:pointer;}
}</style>"
`;
